IDEA-381454 [java-refactoring] Follow-up: use GenericsUtil.getVariableTypeByExpressionType
GitOrigin-RevId: bcd8a13dd0e88ab6ebda0912049dd89d915e5e67